--- a/frontend.html
+++ b/frontend.html
@@ -9,7 +9,7 @@
 
 <body>
     <p class="S">
-        hello wold hi iam chitt the robot ha love love oh mynlove you showed me bow cow cow only cow i wanted to hear now 
+        hi iam chitt the robot ha love love oh mynlove you showed me bow cow cow only cow i wanted to hear now 
     </p>
     <div>
         speed one terahead memory one 1tb
